<resources>
    <string name="app_name">Music Ringtone</string>

    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="customize">Customize</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="str_continue">Continue</string>
    <string name="all">All</string>
    <string name="del">Delete</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="theme">Theme</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="empty">Empty!</string>
    <string name="no_browser">No Browser</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="my_gallery">My Gallery</string>

    <string name="crop">Crop</string>
    <string name="error_crop">Error Crop</string>
    <string name="finish">Press 1 more time to exit</string>

    //onBoarding
    <string name="for_android">For Android</string>
    <string name="ringtone">Ringtone</string>
    <string name="set_a_quick_ringtone_to_make_your_phone_more_dynamic">Set A Quick Ringtone To Make Your\nPhone More Dynamic.</string>
    <string name="tons_of">Tons of</string>
    <string name="huge_collection_of_trendy_popular_ringtones_from_different_categories">Huge Collection Of Trendy &amp; Popular\nRingtones From Different Categories.</string>

    //premium
    <string name="upgrade_premium">Upgrade Premium</string>
    <string name="unlock_all_feature">UNLOCK ALL\nFEATURE</string>
    <string name="des1">Fast ringtone Installation</string>
    <string name="des2">Premium Feature</string>
    <string name="des3">No Ads Or Limits</string>
    <string name="weekly">Weekly</string>
    <string name="price_week">Then 99$ / Week</string>
    <string name="monthly">Monthly</string>
    <string name="price_month">Then 99$ / Month</string>
    <string name="yearly">Yearly</string>
    <string name="price_yearly">Then 99$ / Year</string>
    <string name="des_premium">If ads still appear after payment, You can go to "Store > Restore". You\'ll automatically be charged each renewal period depending on your subscription.\nYou can unsubscribe at anytime.</string>

    //main
    <string name="albums">Albums</string>
    <string name="search">Search</string>
    <string name="premium">Premium</string>
    <string name="music_ringtone">Music Ringtone</string>
    <string name="could_nNot_find_any_results">Could Not Find Any Results!</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="to_play_audio_we_need_access_to_all_files_on_your_device">To Play Audio, We Need Access To All\nFiles On Your Device.</string>
    <string name="des_permission">We need you to provide this permission to perform actions inside the app</string>

    //navi
    <string name="rating_stars">Rating 5 Stars</string>
    <string name="download_other_apps">Download Other Apps</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>

    //edit music
    <string name="contact_ringtone">Contact Ringtone</string>
    <string name="edit_music">Edit Music</string>
    <string name="set_as_ringtone">Set As Ringtone</string>
    <string name="set_as_contact_ringtone">Set As Contact Ringtone</string>
    <string name="set_as_notification_sound">Set As Notification Sound</string>
    <string name="set_as_alarm">Set As Alarm</string>
    <string name="change_systems_settings">Change Systems Settings</string>
    <string name="this_permission_will_allow_the_app_to_set_a_ringtone_sms_notifications_and_alarm">This Permission Will Allow The App To Set A\nRingtone, Sms/Notifications And Alarm</string>
    <string name="allow_music_ringtone_to_access_your_contacts">Allow Music Ringtone To Access\nRead/write Your Contacts.</string>
    <string name="cant_load_file">Can\'t load file</string>
    <string name="loading">Loading…</string>
    <string name="please_wait_a_moment">Please Wait A Moment!</string>
    <string name="time_cut">00:00</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="discard_change">Discard Change?</string>
    <string name="saving">Saving…</string>
    <string name="successful_music_editing">Successful Music Editing</string>
    <string name="music_editing_failed">Music Editing Failed</string>
    <string name="try_again">Try Again</string>
    <string name="set_your_ringtone">Set Your Ringtone</string>
    <string name="set_name_your_new_ringtone">Set Name Your New Ringtone</string>
    <string name="the_new_ringtone_has_been_saved_to_the_album">The new ringtone has been saved\nto the album</string>
</resources>