<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_waveform_on_boarding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="72:80">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20ssp"
            android:fontFamily="@font/nunito_extra_bold"
            android:text="@string/ringtone"
            android:textColor="@color/white"
            android:textSize="@dimen/_34ssp"
            app:layout_constraintBottom_toTopOf="@id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/for_android"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintBottom_toTopOf="@id/tvDes"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/set_a_quick_ringtone_to_make_your_phone_more_dynamic"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv2"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="@color/white"
            app:dotsSize="@dimen/_8sdp"
            app:dotsSpacing="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvDes"
            app:layout_constraintTop_toBottomOf="@id/tvDes"
            app:selectedDotColor="@color/white" />

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_46sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/str_continue"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDes" />

        <ImageView
            android:src="@drawable/ic_right"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>