<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boder_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/allow_permission"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:fontFamily="@font/nunito_regular"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/vLine4"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vLine4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:background="@color/gray_main"
            app:layout_constraintTop_toBottomOf="@id/edtName" />

        <TextView
            android:id="@+id/tvCancelName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vLine5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vLine4" />

        <View
            android:id="@+id/vLine5"
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/gray_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vLine4" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vLine5"
            app:layout_constraintTop_toBottomOf="@id/vLine4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.remi.ringtones.audiocutter.ringtonemaker.freeringtone.viewcustom.LoadingView
        android:id="@+id/vLoad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlSuccess"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/the_new_ringtone_has_been_saved_to_the_album"
            app:layout_constraintBottom_toTopOf="@id/vLine3"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vLine3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:background="@color/gray_main"
            app:layout_constraintBottom_toTopOf="@id/tvDone"
            app:layout_constraintTop_toTopOf="@id/tvDes" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/set_your_ringtone"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vLine3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlFailed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <View
            android:id="@+id/vLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:background="@color/gray_main"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCancelFailed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vLine2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vLine" />

        <View
            android:id="@+id/vLine2"
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/gray_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vLine" />

        <TextView
            android:id="@+id/tvTryAgain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vLine2"
            app:layout_constraintTop_toBottomOf="@id/vLine" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>